--- a/biology.html
+++ b/biology.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About This Website</title>
+<title>Biology</title>
 
 <script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -303,12 +303,30 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About This Website</h1>
+<h1 class="title toc-ignore">Biology</h1>
 
 </div>
 
 
-<p>More about this website.</p>
+<div id="about-s.-cerevisiae" class="section level4">
+<h4>About S. cerevisiae</h4>
+<p><em>Saccharomyces cerevisiae</em> is a single cell yeast.</p>
+<p>It is <strong>eukaryotic</strong> like our body cells.</p>
+<p>Its <strong>genome</strong> is around 12,000,000 bases long and packed in 16 <strong>chromosomes</strong>.</p>
+<p>The genome contains more then 6,000 <strong>genes</strong>.</p>
+<p>It is indispensable for preparing a good <strong>pizza</strong> and a <strong>fresh beer</strong> !</p>
+<hr />
+</div>
+<div id="current-an-past-cool-projects-with-s.-cerevisiae" class="section level4">
+<h4>Current an past cool projects with S. cerevisiae</h4>
+<p><a href="http://syntheticyeast.org/sc2-0/">Synthetic Yeast 2.0</a></p>
+<p><a href="http://1002genomes.u-strasbg.fr/">The 1002 Yeast Genomes Project</a></p>
+<hr />
+</div>
+<div id="must-see-events" class="section level4">
+<h4>must-see events</h4>
+<p><a href="https://www.earthbiogenome.org/">Earth BIOGENOME PROJECT</a></p>
+</div>
 
 
 
