--- a/biology.html
+++ b/biology.html
@@ -286,10 +286,19 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="Informatics.html">Programming</a>
+  <a href="programming.html">Programming</a>
 </li>
 <li>
   <a href="biology.html">Biology</a>
+</li>
+<li>
+  <a href="documents.html">Documents</a>
+</li>
+<li>
+  <a href="blog.html">Communication</a>
+</li>
+<li>
+  <a href="contacts.html">Contacts</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -308,9 +317,10 @@ $(document).ready(function () {
 </div>
 
 
+<hr />
 <div id="about-s.-cerevisiae" class="section level4">
 <h4>About S. cerevisiae</h4>
-<p><em>Saccharomyces cerevisiae</em> is a single cell yeast.</p>
+<p><a href="https://www.yourgenome.org/facts/why-use-yeast-in-research"><em>Saccharomyces cerevisiae</em></a> is a single cell yeast.</p>
 <p>It is <strong>eukaryotic</strong> like our body cells.</p>
 <p>Its <strong>genome</strong> is around 12,000,000 bases long and packed in 16 <strong>chromosomes</strong>.</p>
 <p>The genome contains more then 6,000 <strong>genes</strong>.</p>
@@ -323,8 +333,8 @@ $(document).ready(function () {
 <p><a href="http://1002genomes.u-strasbg.fr/">The 1002 Yeast Genomes Project</a></p>
 <hr />
 </div>
-<div id="must-see-events" class="section level4">
-<h4>must-see events</h4>
+<div id="must-see-projects" class="section level4">
+<h4>must-see projects</h4>
 <p><a href="https://www.earthbiogenome.org/">Earth BIOGENOME PROJECT</a></p>
 </div>
 
